2017-01-17  George G. Vega Yon (g.vegayon@gmail.com)
	* src/abc.cpp: Adding domain check + improving readability.

2016-11-15  George G. Vega Yon (g.vegayon@gmail.com)
	* R/abc_optim.R: Improving docs + creating class and changing  the algorithm a
	  bit.
	* src/abc.cpp: Now the algorithm has the same start point as abc_cpp.

2016-11-08  George G. Vega Yon (g.vegayon@gmail.com)
	* Added NEWS.md file.

2016-11-04  George G. Vega Yon (g.vegayon@gmail.com)
	* .travis.yml*: Added codecov.
	* tests/*: Added testthat.

2016-11-03  George G. Vega Yon (g.vegayon@gmail.com)
	* R/*.R: Adding roxygen to the project.
	* src/abc.cpp: Adding pure C++ version of the function
	* playground/*: Cleaning up