@@ -1,21 +1,21 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/abc_optim.R
 \name{abc_optim}
-\alias{abc_answer}
-\alias{abc_cpp}
 \alias{abc_optim}
+\alias{abc_answer}
 \alias{print.abc_answer}
+\alias{abc_cpp}
 \title{Artificial Bee Colony Optimization}
 \usage{
 abc_optim(par, fn, ..., FoodNumber = 20, lb = rep(-Inf, length(par)),
   ub = rep(+Inf, length(par)), limit = 100, maxCycle = 1000,
-  optiinteger = FALSE, criter = 50)
+  optiinteger = FALSE, criter = 50, parscale = rep(1, 5), fnscale = 1)
 
 \method{print}{abc_answer}(x, ...)
 
 abc_cpp(par, fn, ..., FoodNumber = 20, lb = rep(-Inf, length(par)),
   ub = rep(+Inf, length(par)), limit = 100, maxCycle = 1000,
-  criter = 50)
+  criter = 50, parscale = rep(1, length(par)), fnscale = 1)
 }
 \arguments{
 \item{par}{Initial values for the parameters to be optimized over}
@@ -40,6 +40,12 @@ scalar result.}
 \item{optiinteger}{Whether to optimize binary parameters or not.}
 
 \item{criter}{Stop criteria (numer of unchanged results) until stopping}
+
+\item{parscale}{Numeric vector of length \code{length(par)}. Scale applied
+to the parameters (see \code{\link[stats:optim]{optim}}).}
+
+\item{fnscale}{Numeric scalar. Scale applied function. If \code{fnscale < 0},
+then the problem becomes a maximization problem (see \code{\link[stats:optim]{optim}}).}
 
 \item{x}{An object of class \code{abc_answer}.}
 }
@@ -103,9 +109,6 @@ ans <- abc_optim(rep(10,5), fs, lb=-100, ub=100, criter=200)
 ans[c("par", "counts", "value")]
 
 }
-\author{
-George Vega Yon \email{g.vegayon@gmail.com}
-}
 \references{
 D. Karaboga, \emph{An Idea based on Honey Bee Swarm for
 Numerical Optimization}, tech. report TR06,Erciyes University, Engineering
@@ -118,5 +121,7 @@ Artificial Bee Colony (ABC) Algorithm (website)
 Basic version of the algorithm implemented in \code{C} (ABC's official
 website) \url{http://mf.erciyes.edu.tr/abc/form.aspx}
 }
+\author{
+George Vega Yon \email{g.vegayon@gmail.com}
+}
 \keyword{optimization}
-
