@@ -1,3 +1,7 @@
+2017-01-18  George G. Vega Yon (g.vegayon@gmail.com)
+	* R/abc_optim.R: Added fnscale and parscale.
+
+
 2017-01-17  George G. Vega Yon (g.vegayon@gmail.com)
 	* src/abc.cpp: Adding domain check + improving readability.
 
